k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: APP_ID
spec:
  replicas: 2
  selector:
    matchLabels:
      app: APP_ID
  template:
    metadata:
      labels:
        app: APP_ID
    spec:
      containers:
        - name: APP_ID
          image: deepak97813/APP_ID:IMAGE_TAG
          ports:
            - containerPort: 3000

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
