k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_ID-service
spec:
  selector:
    app: APP_ID
  ports:
    - protocol: TCP
      port: APP_PORT
      targetPort: APP_PORT
  type: ClusterIP
